# GerenciadorDeMidias

./: .gitignore  Algorithms.hs  GerenciadorDeMidias.cabal  Interface.hs  Main.hs  Order.hs  README.md  Types.hs  Validation.hs  funcoes.txt
app/: Main.hs
src/: Algorithms.hs  ExportImport.hs  FuncoesImpuras.hs  ImpureFunctions.hs  Interface.hs  ItemsOperations.hs  Leitura.hs  Loans.hs  Logs.hs  Main.hs  Order.hs  Reading.hs  Reports.hs  Types.hs  UsersOperations.hs  Validation.hs  appLog.csv  emprestimos.csv  itens.csv  usuarios.csv
